Use valueOf instead of deprecated constructor to parse numbers